appointment-scheduler-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: appointment-scheduler-app
spec:
  selector:
    matchLabels:
      app: appointment-scheduler-app
  replicas: 1
  template:
    metadata:
      labels:
        app: appointment-scheduler-app
    spec:
      containers:
        - image: 191518685251.dkr.ecr.us-west-1.amazonaws.com/appointment-scheduler-app:latest
          imagePullPolicy: Always
          name: appointment-scheduler-app
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: appointment-scheduler-app-service
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector:
    app: appointment-scheduler-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: appointment-scheduler-app-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-1:191518685251:certificate/fd494ead-b434-42ea-bad3-c4b7b83dab0e
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: appointment-scheduler-app-service
                port:
                  number: 80
